Create STT Script

--- a/arlabs/Assets/packages.config
+++ b/arlabs/Assets/packages.config
@@ -6,6 +6,7 @@
   <package id="Google.Apis" version="1.68.0" />
   <package id="Google.Apis.Auth" version="1.68.0" />
   <package id="Google.Apis.Core" version="1.68.0" />
+  <package id="Google.Cloud.Speech.V1" version="3.8.0" manuallyInstalled="true" />
   <package id="Google.Cloud.TextToSpeech.V1" version="3.10.0" manuallyInstalled="true" />
   <package id="Google.LongRunning" version="3.3.0" />
   <package id="Google.Protobuf" version="3.28.2" />
@@ -16,6 +17,8 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0" />
+  <package id="NAudio" version="2.2.1" manuallyInstalled="true" />
+  <package id="NAudio.Core" version="2.2.1" manuallyInstalled="true" />
   <package id="Newtonsoft.Json" version="13.0.3" manuallyInstalled="true" />
   <package id="System.CodeDom" version="7.0.0" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.1" />
