--- a/backend/assisstant/requirements.txt
+++ b/backend/assisstant/requirements.txt
@@ -1,7 +1,69 @@
-langchain
-google-generativeai
-langchain-google-genai
-langgraph
-langchain-google-vertexai
-google-cloud-texttospeech
-google-genai
+annotated-types==0.7.0
+anyio==4.9.0
+cachetools==5.5.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+exceptiongroup==1.2.2
+fastapi==0.115.12
+filetype==1.2.0
+google-ai-generativelanguage==0.6.17
+google-api-core==2.24.2
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-cloud-bigquery==3.31.0
+google-cloud-core==2.4.3
+google-cloud-resource-manager==1.14.2
+google-cloud-storage==2.19.0
+google-cloud-texttospeech==2.25.1
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.69.2
+greenlet==3.1.1
+grpc-google-iam-v1==0.14.2
+grpcio==1.71.0
+grpcio-status==1.71.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
+idna==3.10
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain-core==0.3.49
+langchain-google-genai==2.1.2
+langgraph==0.3.21
+langgraph-checkpoint==2.0.23
+langgraph-prebuilt==0.1.7
+langgraph-sdk==0.1.60
+langsmith==0.3.19
+numpy==2.2.4
+orjson==3.10.16
+ormsgpack==1.9.1
+packaging==24.2
+proto-plus==1.26.1
+protobuf==5.29.4
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.0
+pydantic_core==2.33.0
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+PyYAML==6.0.2
+requests==2.32.3
+requests-toolbelt==1.0.0
+rsa==4.9
+shapely==2.0.7
+six==1.17.0
+sniffio==1.3.1
+starlette==0.46.1
+tenacity==9.0.0
+tqdm==4.67.1
+typing-inspection==0.4.0
+typing_extensions==4.13.0
+uritemplate==4.1.1
+urllib3==2.3.0
+uvicorn==0.34.0
+xxhash==3.5.0
+zstandard==0.23.0
