--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,270 @@
-requests==2.31.0
-python-dotenv==1.0.0 
+absl-py==2.1.0
+aioice==0.10.1
+aiortc==1.12.0
+altgraph==0.17.4
+annotated-types==0.7.0
+anyio==4.9.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+astunparse==1.6.3
+async-lru==2.0.4
+attrs==23.2.0
+audioread==3.0.1
+av==14.4.0
+Babel==2.15.0
+bcrypt==4.1.2
+beautifulsoup4==4.12.3
+bleach==6.1.0
+cachetools==5.5.2
+certifi==2025.1.31
+cffi==1.16.0
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.2.1
+-e git+https://github.com/hemanth2004/cross-ipc.git@7574ea5f4aaab98cb8ca02efaf6d27844013e241#egg=cross_ipc&subdirectory=cross-ipc\cross-ipc-python
+cryptography==45.0.3
+cv==1.0.0
+cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.9
+dnspython==2.6.1
+docstring_parser==0.16
+dotenv==0.9.9
+email_validator==2.1.2
+executing==2.0.1
+fastapi==0.115.12
+fastapi-cli==0.0.4
+fastapi-users==13.0.0
+fastjsonschema==2.19.1
+filelock==3.17.0
+filetype==1.2.0
+flatbuffers==24.3.25
+fonttools==4.51.0
+fqdn==1.5.1
+gast==0.5.4
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.2
+google-api-python-client==2.165.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-cloud-aiplatform==1.85.0
+google-cloud-bigquery==3.31.0
+google-cloud-core==2.4.3
+google-cloud-resource-manager==1.14.2
+google-cloud-storage==2.19.0
+google-cloud-texttospeech==2.25.1
+google-crc32c==1.7.1
+google-genai==1.9.0
+google-generativeai==0.8.4
+google-pasta==0.2.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.69.2
+greenlet==3.0.3
+grpc-google-iam-v1==0.14.2
+grpcio==1.71.0
+grpcio-status==1.71.0
+h11==0.14.0
+h5py==3.11.0
+httpcore==1.0.7
+httplib2==0.22.0
+httptools==0.6.1
+httpx==0.28.1
+httpx-sse==0.4.0
+idna==3.10
+ifaddr==0.2.0
+imageio==2.34.2
+ipykernel==6.29.4
+ipython==8.24.0
+ipywidgets==8.1.2
+isoduration==20.11.0
+jedi==0.19.1
+Jinja2==3.1.4
+joblib==1.4.2
+json5==0.9.25
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+jupyter_server==2.14.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.1.8
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.1
+jupyterlab_widgets==3.0.10
+keras==3.3.3
+keyboard==0.13.5
+kiwisolver==1.4.5
+komm==0.9.1
+langchain==0.3.21
+langchain-core==0.3.49
+langchain-google-genai==2.0.10
+langchain-google-vertexai==2.0.17
+langchain-text-splitters==0.3.7
+langgraph==0.3.20
+langgraph-checkpoint==2.0.23
+langgraph-prebuilt==0.1.7
+langgraph-sdk==0.1.59
+langsmith==0.3.19
+lark==1.2.2
+lazy_loader==0.4
+libclang==18.1.1
+librosa==0.10.2.post1
+llvmlite==0.43.0
+macholib==1.16.3
+makefun==1.15.2
+mariadb==1.1.10
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.8.4
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.0.2
+ml-dtypes==0.3.2
+modulegraph==0.19.6
+msgpack==1.1.0
+namex==0.0.8
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.3
+nltk==3.9.1
+noisereduce==3.0.2
+notebook==7.1.3
+notebook_shim==0.2.4
+numba==0.60.0
+numpy==1.26.4
+opencv-python==4.10.0.84
+opt-einsum==3.3.0
+optree==0.11.0
+orjson==3.10.5
+ormsgpack==1.9.0
+overrides==7.7.0
+packaging==24.2
+paho-mqtt==2.1.0
+pandas==2.2.2
+pandocfilters==1.5.1
+parso==0.8.4
+pefile==2023.2.7
+pexpect==4.9.0
+pillow==10.3.0
+platformdirs==4.2.1
+pooch==1.8.2
+prometheus_client==0.20.0
+prompt-toolkit==3.0.43
+proto-plus==1.26.1
+protobuf==5.29.4
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pwdlib==0.2.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+PyAudio==0.2.14
+pycparser==2.22
+pydantic==2.11.2
+pydantic_core==2.33.1
+pyee==13.0.0
+Pygments==2.18.0
+pyinstaller==6.6.0
+pyinstaller-hooks-contrib==2024.6
+PyJWT==2.8.0
+pylast==5.5.0
+pylibsrtp==0.12.0
+pyOpenSSL==25.1.0
+pyparsing==3.1.2
+pyperclip==1.9.0
+pyreadline3==3.5.4
+pyshine==0.0.9
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-json-logger==2.0.7
+python-multipart==0.0.9
+pytz==2024.1
+pywin32==306
+pywin32-ctypes==0.2.2
+pywinpty==2.0.13
+PyYAML==6.0.1
+pyzmq==26.0.3
+qtconsole==5.5.2
+QtPy==2.4.1
+referencing==0.35.1
+regex==2024.9.11
+requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.1
+rpds-py==0.18.1
+rsa==4.9
+scikit-image==0.24.0
+scikit-learn==1.4.2
+scipy==1.13.0
+seaborn==0.13.2
+Send2Trash==1.8.3
+setuptools==78.1.0
+shapely==2.0.7
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+sounddevice==0.5.0
+soundfile==0.12.1
+soupsieve==2.5
+soxr==0.5.0.post1
+SQLAlchemy==2.0.30
+stack-data==0.6.3
+starlette==0.46.1
+tenacity==9.0.0
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-intel==2.16.1
+termcolor==2.4.0
+terminado==0.18.1
+threadpoolctl==3.5.0
+tifffile==2024.7.24
+tinycss2==1.3.0
+tornado==6.4
+tqdm==4.66.5
+traitlets==5.14.3
+typer==0.12.3
+types-python-dateutil==2.9.0.20240316
+typing-inspection==0.4.0
+typing_extensions==4.13.0
+tzdata==2024.1
+ujson==5.10.0
+uri-template==1.3.0
+uritemplate==4.1.1
+urllib3==2.3.0
+uvicorn==0.34.0
+validators==0.34.0
+virtualenv==20.29.2
+watchfiles==0.22.0
+wcwidth==0.2.13
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
+Werkzeug==3.0.3
+wheel==0.45.1
+widgetsnbextension==4.0.10
+windows-curses==2.4.1
+wrapt==1.16.0
+xxhash==3.5.0
+yewtube==2.12.0
+youtube-search-python==1.6.6
+yt-dlp==2025.5.22
+zstandard==0.23.0
